# top_billboard_songs_spotify

./: .gitignore  1 - Data Acquisition.ipynb  2 - Data Cleaning & Feature Selection.ipynb  2 - Data Cleaning & Features.ipynb  BillboardSpotify.twbx  README.md  pyproject.toml  requirements.txt
data/processed/: artists.csv  tags.csv
