[tool.poetry]
name = "projeto_visualizacao"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "3.0.5"
pandas = "1.2.1"
requests = "2.25.1"
tqdm = "4.56.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
