[tool.poetry]
name = "projeto_visualizacao"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "3.0.5"
pandas = "1.2.1"
requests = "2.25.1"
tqdm = "4.56.0"
spotipy = "2.16.1"
python-dotenv = "^0.15.0"
more-itertools = "^8.6.0"
spacy = "^3.0.1"
missingno = "0.4.2"
fuzzywuzzy = "0.18.0"
python-Levenshtein = "0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
